--- a/src/App.css
+++ b/src/App.css
@@ -278,7 +278,7 @@ li {
       padding-right: 0px;
     }
     .carousel_white_buy {
-      margin-bottom: 200px;
+      margin-top: 100px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -287,6 +287,7 @@ li {
       display: none;
     }
     .frame-overlay-dark-grey-buy {
+      border: 3px solid hsl(0, 0%, 20%);
       width: 235px;
       height: 260px;
     }
@@ -327,7 +328,7 @@ li {
       padding-right: 0px;
     }
     .carousel_white_buy {
-      margin-bottom: 200px;
+      margin-top: 100px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -336,6 +337,7 @@ li {
       display: none;
     }
     .frame-overlay-dark-grey-buy {
+      border: 3px solid hsl(0, 0%, 20%);
       width: 251px;
       height: 278px;
     }
@@ -374,7 +376,7 @@ li {
       padding-right: 0px;
     }
     .carousel_white_buy {
-      margin-bottom: 200px;
+      margin-top: 100px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -383,6 +385,7 @@ li {
       display: none;
     }
     .frame-overlay-dark-grey-buy {
+      border: 3px solid hsl(0, 0%, 20%);
       width: 251px;
       height: 278px;
     }
@@ -423,7 +426,7 @@ li {
       padding-right: 0px;
     }
     .carousel_white_buy {
-      margin-bottom: 200px;
+      margin-top: 100px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -432,6 +435,7 @@ li {
       display: none;
     }
     .frame-overlay-dark-grey-buy {
+      border: 3px solid hsl(0, 0%, 20%);
       width: 260px;
       height: 288px;
     }
@@ -473,7 +477,7 @@ li {
       padding-right: 0px;
     }
     .carousel_white_buy {
-      margin-bottom: 200px;
+      margin-top: 100px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -482,6 +486,7 @@ li {
       display: none;
     }
     .frame-overlay-dark-grey-buy {
+      border: 3px solid hsl(0, 0%, 20%);
       width: 324px;
       height: 358px;
     }
@@ -500,7 +505,7 @@ li {
       width: 386px;
     }
     .carousel_white_buy {
-      margin-bottom: 200px;
+      margin-top: 100px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -509,6 +514,7 @@ li {
       display: none;
     }
     .frame-overlay-dark-grey-buy {
+      border: 3px solid hsl(0, 0%, 20%);
       width: 349px;
       height: 386px;
     }
@@ -526,7 +532,7 @@ li {
       width: 652px;
     }
     .carousel_white_buy {
-      margin-bottom: 200px;
+      margin-top: 100px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -535,6 +541,7 @@ li {
       display: none;
     }
     .frame-overlay-dark-grey-buy {
+      border: 3px solid hsl(0, 0%, 20%);
       width: 590px;
       height: 652px;
     }
@@ -552,7 +559,7 @@ li {
       width: 918px;
     }
     .carousel_white_buy {
-      margin-bottom: 200px;
+      margin-top: 100px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -561,6 +568,7 @@ li {
       display: none;
     }
     .frame-overlay-dark-grey-buy {
+      border: 3px solid hsl(0, 0%, 20%);
       width: 831px;
       height: 918px;
     }
