--- a/src/App.css
+++ b/src/App.css
@@ -278,6 +278,9 @@ li {
       padding-left: 0px;
       padding-right: 0px;
     }
+    .carousel_white {
+      margin-top: 48px;
+    }
     .carousel_white_buy {
       margin-top: 40px;
     }
@@ -328,6 +331,9 @@ li {
       padding-left: 0px;
       padding-right: 0px;
     }
+    .carousel_white {
+      margin-top: 48px;
+    }
     .carousel_white_buy {
       margin-top: 40px;
     }
@@ -375,6 +381,9 @@ li {
     .nav_links_li {
       padding-left: 0px;
       padding-right: 0px;
+    }
+    .carousel_white {
+      margin-top: 48px;
     }
     .carousel_white_buy {
       margin-top: 40px;
@@ -425,6 +434,9 @@ li {
     .nav_links_li {
       padding-left: 0px;
       padding-right: 0px;
+    }
+    .carousel_white {
+      margin-top: 48px;
     }
     .carousel_white_buy {
       margin-top: 40px;
@@ -477,6 +489,9 @@ li {
       padding-left: 0px;
       padding-right: 0px;
     }
+    .carousel_white {
+      margin-top: 48px;
+    }
     .carousel_white_buy {
       margin-top: 40px;
     }
@@ -505,6 +520,9 @@ li {
       height: 166px;
       width: 386px;
     }
+    .carousel_white {
+      margin-top: 48px;
+    }
     .carousel_white_buy {
       margin-top: 40px;
     }
@@ -532,6 +550,9 @@ li {
       height: 280px;
       width: 652px;
     }
+    .carousel_white {
+      margin-top: 48px;
+    }
     .carousel_white_buy {
       margin-top: 40px;
     }
@@ -558,6 +579,9 @@ li {
     .CarouselSize {
       height: 394px;
       width: 918px;
+    }
+    .carousel_white {
+      margin-top: 48px;
     }
     .carousel_white_buy {
       margin-top: 40px;
