Mobile CSS 006 -position OK frame adjust on BUY component

--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%; /* Adjust width as needed */
+  width: 100%;
 }
 
 .single-image-display img {
@@ -284,6 +284,9 @@ li {
     .carousel_white_buy {
       margin-top: 40px;
     }
+    .carousel_black {
+      margin-top: 48px;
+    }
     .frame-overlay-dark-grey {
       display: none;
     }
@@ -337,6 +340,9 @@ li {
     .carousel_white_buy {
       margin-top: 40px;
     }
+    .carousel_black {
+      margin-top: 48px;
+    }
     .frame-overlay-dark-grey {
       display: none;
     }
@@ -387,6 +393,9 @@ li {
     }
     .carousel_white_buy {
       margin-top: 40px;
+    }
+    .carousel_black {
+      margin-top: 48px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -440,6 +449,9 @@ li {
     }
     .carousel_white_buy {
       margin-top: 40px;
+    }
+    .carousel_black {
+      margin-top: 48px;
     }
     .frame-overlay-dark-grey {
       display: none;
@@ -495,6 +507,9 @@ li {
     .carousel_white_buy {
       margin-top: 40px;
     }
+    .carousel_black {
+      margin-top: 48px;
+    }
     .frame-overlay-dark-grey {
       display: none;
     }
@@ -526,6 +541,9 @@ li {
     .carousel_white_buy {
       margin-top: 40px;
     }
+    .carousel_black {
+      margin-top: 48px;
+    }
     .frame-overlay-dark-grey {
       display: none;
     }
@@ -556,6 +574,9 @@ li {
     .carousel_white_buy {
       margin-top: 40px;
     }
+    .carousel_black {
+      margin-top: 48px;
+    }
     .frame-overlay-dark-grey {
       display: none;
     }
@@ -585,6 +606,9 @@ li {
     }
     .carousel_white_buy {
       margin-top: 40px;
+    }
+    .carousel_black {
+      margin-top: 48px;
     }
     .frame-overlay-dark-grey {
       display: none;
