ready to check mobile at apple

--- a/src/App.css
+++ b/src/App.css
@@ -246,7 +246,7 @@ li {
 /*==========================================================================================================================*/
 /*------------------------------------------------- MEDIA QUERIES start ----------------------------------------------------*/
 /*==========================================================================================================================*/
-
+/* READY TO CHECK */
 
 /* Portrait and Landscape */
 @media only screen 
