--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,13 @@
 }
 
 .carousel_white_buy {
-  background-color: hsl(0, 0%, 100%);
+  background-color: hsl(0, 0%, 50%);
   max-width: 100vw;
   transform: scale(0.6);
   margin-top: 40px;
   transform-origin: top center;
+  border: 2px solid red;
+  /* box-sizing: border-box; */
 }
 
 .carousel_black {
