--- a/src/App.css
+++ b/src/App.css
@@ -58,10 +58,13 @@
 }
 
 .carousel_white_buy {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   background-color: hsl(0, 0%, 50%);
   max-width: 100vw;
   transform: scale(0.6);
-  margin-top: 40px;
+  /* margin-top: 120px; */
   transform-origin: top center;
   box-sizing: border-box;
 }
