--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,9 @@
   width: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
+  align-items: center;
   background-color: white;
-  border: 2px solid red;
 }
 
 .sizes_container {
@@ -61,7 +61,7 @@
   background-color: hsl(0, 0%, 50%);
   max-width: 100vw;
   transform: scale(0.6);
-  margin-top: 120px;
+  margin-top: 220px;
   transform-origin: top center;
   box-sizing: border-box;
 }
