--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   justify-content: flex-start;
   align-items: center;
   background-color: white;
+  border: 2px solid green;
 }
 
 .sizes_container {
@@ -58,10 +59,10 @@
 }
 
 .carousel_white_buy {
-  background-color: hsl(0, 0%, 50%);
+  background-color: hsl(0, 50%, 50%);
   max-width: 100vw;
   transform: scale(0.6);
-  margin-top: 220px;
+  margin-top: 320px;
   transform-origin: top center;
   box-sizing: border-box;
 }
