--- a/src/App.css
+++ b/src/App.css
@@ -32,23 +32,13 @@
   justify-content: flex-start;
   align-items: center;
   background-color: white;
-  border: 2px solid green;
 }
 
-.sizes_container {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  height: auto;
-  border: 2px solid blue;
-  margin-top: 20px;
-}
-.size_button {
-  background-color: lightblue;
-  padding: 10px;
-  margin: 5px;
-  text-align: center;
+.carousel_black {
+  background-color: black;
+  margin-top: 128px;
+  max-height: 100vh;
+  max-width: 100vw;
 }
 
 .carousel_white {
@@ -59,20 +49,34 @@
 }
 
 .carousel_white_buy {
-  background-color: hsl(0, 50%, 50%);
+  background-color: hsl(30, 100%, 50%);
   max-width: 100vw;
   transform: scale(0.6);
-  margin-top: 320px;
+  margin-top: 80px;
   transform-origin: top center;
   box-sizing: border-box;
 }
 
-.carousel_black {
-  background-color: black;
-  margin-top: 128px;
-  max-height: 100vh;
-  max-width: 100vw;
+.sizes_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: auto;
+  border: 2px solid blue;
+  margin-top: 80px;
 }
+
+.size_button {
+  background-color: lightblue;
+  padding: 10px;
+  margin: 5px;
+  text-align: center;
+}
+
+/* ==================================================================================================== */
+/* ========================================= NAVIGATION START ========================================= */
+/* ==================================================================================================== */
 
 button {
   text-decoration: none;
@@ -100,8 +104,6 @@ button:active {
   background-color: hsl(0, 100%, 50%);
   color: hsl(0, 0%, 100%);
 }
-
-/* NAVIGATION START */
 
 .navigation-wrapper {
   padding-bottom: 0px;
@@ -138,8 +140,9 @@ nav {
   height: 38px;
 }
 
-/* NAVIGATION END */
-
+/* ==================================================================================================== */
+/* ========================================== NAVIGATION END ========================================== */
+/* ==================================================================================================== */
 
 /* FRAME around the image = START */
 
@@ -273,9 +276,11 @@ li {
 
 
 /*==========================================================================================================================*/
+/*==========================================================================================================================*/
 /*------------------------------------------------- MEDIA QUERIES start ----------------------------------------------------*/
 /*==========================================================================================================================*/
-/* READY TO CHECK */
+/*==========================================================================================================================*/
+
 
 /* Portrait and Landscape */
 @media only screen 
