--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
 }
 
 .carousel_white_buy {
-  background-color: hsl(30, 100%, 50%);
+  background-color: hsl(0, 0%, 100%);
   max-width: 100vw;
   transform: scale(0.6);
   margin-top: 80px;
@@ -164,15 +164,13 @@ nav {
 }
 
 .frame-overlay-dark-grey-buy {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 670px;
   height: 740px;
   border: 3px solid hsl(0, 0%, 20%);
-  pointer-events: none;
-  z-index: 1;
-  transform: translate(-50%, -50%);
 }
 
 .frame-overlay-light-grey {
@@ -191,14 +189,20 @@ nav {
 
 /* SINGLE IMAGE display = START */
 
-.single-image-display {
+.single_image_display_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.single_image_display {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
 }
 
-.single-image-display img {
+.single_image_display img {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain; /* Ensures image fits within container */
