--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,10 @@
 }
 
 .carousel_white_buy {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   background-color: hsl(0, 0%, 100%);
   max-width: 100vw;
   transform: scale(0.6);
