--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background-color: hsl(30, 100%, 50%);
+  background-color: hsl(30, 100%, 100%);
   max-width: 100vw;
   transform: scale(0.6);
   margin-top: 80px;
@@ -67,15 +67,30 @@
   justify-content: flex-start;
   align-items: center;
   height: auto;
-  border: 2px solid blue;
-  margin-top: 80px;
+  width: 100%;
+  margin-top: 30px;
 }
 
 .size_button {
-  background-color: lightblue;
+  background-color: white;
+  border: 2px solid black;
+  width: 100%;
   padding: 10px;
   margin: 5px;
   text-align: center;
+  font-weight: normal;
+  font-size: 24px;
+}
+
+.buy_button {
+  background-color: black;
+  width: 100%;
+  padding: 10px;
+  margin: 15px;
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  font-size: 30px;
 }
 
 /* ==================================================================================================== */
