buy page ready with buttons layout

--- a/src/App.css
+++ b/src/App.css
@@ -303,7 +303,7 @@ li {
 /*------------------------------------------------- MEDIA QUERIES start ----------------------------------------------------*/
 /*==========================================================================================================================*/
 /*==========================================================================================================================*/
-
+/* check in apple*/
 
 /* Portrait and Landscape */
 @media only screen 
