--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,10 @@
   width: auto;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: start;
   align-items: center;
   background-color: white;
+  margin-bottom: none;
 }
 
 .carousel_black {
@@ -54,11 +55,10 @@
   justify-content: flex-start;
   align-items: center;
   background-color: hsl(30, 100%, 100%);
-  max-width: 100vw;
+  width: 670px;
   transform: scale(0.6);
   margin-top: 80px;
   transform-origin: top center;
-  box-sizing: border-box;
 }
 
 .sizes_container {
@@ -66,9 +66,8 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: auto;
   width: 100%;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .size_button {
@@ -86,7 +85,7 @@
   background-color: black;
   width: 100%;
   padding: 10px;
-  margin: 15px;
+  margin: 10px;
   text-align: center;
   color: white;
   font-weight: bold;
