buy page top margin is 74px + color settings  has to come to buy page from colors and disco

--- a/src/App.css
+++ b/src/App.css
@@ -334,6 +334,7 @@ li {
       margin-top: 68px;
     }
     .carousel_white_buy {
+      width: 340px;
       margin-top: 50px;
     }
     .carousel_black {
@@ -386,6 +387,7 @@ li {
       margin-top: 68px;
     }
     .carousel_white_buy {
+      width: 340px;
       margin-top: 50px;
     }
     .carousel_black {
@@ -436,6 +438,7 @@ li {
       margin-top: 68px;
     }
     .carousel_white_buy {
+      width: 340px;
       margin-top: 50px;
     }
     .carousel_black {
@@ -488,6 +491,7 @@ li {
       margin-top: 68px;
     }
     .carousel_white_buy {
+      width: 348px;
       margin-top: 50px;
     }
     .carousel_black {
@@ -541,6 +545,7 @@ li {
       margin-top: 68px;
     }
     .carousel_white_buy {
+      width: 412px;
       margin-top: 50px;
     }
     .carousel_black {
@@ -575,6 +580,7 @@ li {
       margin-top: 68px;
     }
     .carousel_white_buy {
+      width: 440px;
       margin-top: 50px;
     }
     .carousel_black {
@@ -608,6 +614,7 @@ li {
       margin-top: 68px;
     }
     .carousel_white_buy {
+      width: 690px;
       margin-top: 50px;
     }
     .carousel_black {
@@ -641,6 +648,7 @@ li {
       margin-top: 68px;
     }
     .carousel_white_buy {
+      width: 931px;
       margin-top: 50px;
     }
     .carousel_black {
