--- a/src/App.css
+++ b/src/App.css
@@ -34,9 +34,8 @@
   background-color: white;
 }
 
-.CarouselSize {
-  margin: none;
-  padding: none;
+.hue-rotate {
+  height: 236px;
 }
 
 .carousel_black {
@@ -316,6 +315,10 @@ li {
       height: 112px;
       width: 260px;
     }
+    .hue-rotate {
+      height: 112px;
+      width: 260px;
+    }
     button {
       padding-left: 5px;
       padding-right: 5px;
@@ -366,6 +369,10 @@ li {
   and (max-device-width: 480px)
   and (-webkit-min-device-pixel-ratio: 2) {
     .CarouselSize {
+      height: 120px;
+      width: 278px;
+    }
+    .hue-rotate {
       height: 120px;
       width: 278px;
     }
@@ -420,6 +427,10 @@ li {
       height: 120px;
       width: 278px;
     }
+    .hue-rotate {
+      height: 120px;
+      width: 278px;
+    }
     button {
       padding-left: 5px;
       padding-right: 5px;
@@ -470,6 +481,10 @@ li {
   and (max-device-width: 568px)
   and (-webkit-min-device-pixel-ratio: 2) {
     .CarouselSize {
+      height: 124px;
+      width: 288px;
+    }
+    .hue-rotate {
       height: 124px;
       width: 288px;
     }
@@ -527,6 +542,10 @@ li {
       height: 154px;
       width: 358px;
     }
+    .hue-rotate {
+      height: 154px;
+      width: 358px;
+    }
     button {
       padding-left: 5px;
       padding-right: 5px;
@@ -581,6 +600,10 @@ li {
       height: 166px;
       width: 386px;
     }
+    .hue-rotate {
+      height: 166px;
+      width: 386px;
+    }
     .carousel_white {
       margin-top: 74px;
     }
@@ -612,6 +635,10 @@ li {
   and (max-device-width: 1023px) 
   and (-webkit-min-device-pixel-ratio: 1) {
     .CarouselSize {
+      height: 280px;
+      width: 652px;
+    }
+    .hue-rotate {
       height: 280px;
       width: 652px;
     }
@@ -647,6 +674,10 @@ li {
   and (-webkit-min-device-pixel-ratio: 2) {
     .CarouselSize {
       height: 394px;
+      width: 918px;
+    }
+    .hue-rotate {
+      height: 395px;
       width: 918px;
     }
     .carousel_white {
@@ -687,6 +718,10 @@ li {
       height: 220px;
       width: 513px;
     }
+    .hue-rotate {
+      height: 220px;
+      width: 513px;
+    }
 }
 
 /* ----------- Retina Screens ----------- */
@@ -696,6 +731,10 @@ li {
   and (-webkit-min-device-pixel-ratio: 2)
   and (min-resolution: 192dpi) { 
     .CarouselSize {
+      height: 236px;
+      width: 550px;
+    }
+    .hue-rotate {
       height: 236px;
       width: 550px;
     }
