--- a/src/App.css
+++ b/src/App.css
@@ -214,7 +214,9 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: 2px solid red;
 }
+
 .single_image_display {
   display: flex;
   justify-content: center;
