--- a/src/App.css
+++ b/src/App.css
@@ -214,7 +214,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid green;
+  border: 2px solid red;
 }
 
 .single_image_display {
@@ -586,8 +586,8 @@ li {
     }
     .frame-overlay-dark-grey-buy {
       border: 3px solid hsl(0, 0%, 20%);
-      width: 420px;
-      height: 460px;
+      width: 412px;
+      height: 450px;
     }
 
 }
@@ -663,8 +663,8 @@ li {
     }
     .frame-overlay-dark-grey-buy {
       border: 3px solid hsl(0, 0%, 20%);
-      width: 458px;
-      height: 500px;
+      width: 476px;
+      height: 520px;
     }
 }
 
