--- a/src/App.css
+++ b/src/App.css
@@ -214,7 +214,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid red;
+  border: 2px solid blue;
 }
 
 .single_image_display {
@@ -532,8 +532,7 @@ li {
     }
 }
 
-/* ----------- iPhone 6, 6S, 7 and 8 ----------- */
-/* --- this works OK --- */
+/* ----------- iPhone 6, 6S, 7, 8 and SE ----------- */
 
 /* Portrait and Landscape */
 @media only screen 
@@ -630,7 +629,80 @@ li {
     }
 }
 
+/* ----------- iPhone 12, iPhone 12 Pro, iPhone 13, iPhone 13 Pro, and iPhone 14 ----------- */
+@media only screen 
+    and (width: 390px) 
+    and (height: 844px) 
+    and (-webkit-device-pixel-ratio: 3) {
+    .CarouselSize {
+      height: 166px;
+      width: 386px;
+    }
+    .hue-rotate {
+      height: 166px;
+      width: 386px;
+    }
+    .carousel_white {
+      margin-top: 76px;
+    }
+    .carousel_white_buy {
+      width: 440px;
+      margin-top: 50px;
+    }
+    .carousel_black {
+      margin-top: 76px;
+    }
+    .frame-overlay-dark-grey {
+      display: none;
+    }
+    .frame-overlay-light-grey {
+      display: none;
+    }
+    .frame-overlay-dark-grey-buy {
+      border: 3px solid hsl(0, 0%, 20%);
+      width: 476px;
+      height: 520px;
+    }
+}
+
+/* -----------  iPhone 14 Pro Max, iPhone 15 Plus and iPhone 15 Pro Max ----------- */
+@media only screen 
+    and (width: 430px) 
+    and (height: 932px) 
+    and (-webkit-device-pixel-ratio: 3) { }
+
+/* -----------  iPhone 12 Pro Max, iPhone 13 Pro Max, and iPhone 14 Plus ----------- */
+@media only screen 
+    and (width: 428px) 
+    and (height: 926px) 
+    and (-webkit-device-pixel-ratio: 3) { }
+
+/* ----------- iPhone X, iPhone Xs, iPhone 11 Pro, iPhone 12 Mini, and iPhone 13 Mini ----------- */
+@media only screen 
+    and (width: 375px) 
+    and (height: 812px) 
+    and (-webkit-device-pixel-ratio: 3) { }
+
+/* ----------- iPhone XR, and iPhone 11 ----------- */
+@media only screen 
+    and (width: 414px) 
+    and (height: 896px) 
+    and (-webkit-device-pixel-ratio: 2) { }
+
+/* ----------- iPhone Xs Max, and iPhone 11 Pro Max ----------- */
+@media only screen 
+    and (width: 414px) 
+    and (height: 896px) 
+    and (-webkit-device-pixel-ratio: 3) { }
+
+/* ----------- iPhone 14 Pro, iPhone 15 and iPhone 15 Pro ----------- */
+@media only screen 
+    and (width: 393px) 
+    and (height: 852px) 
+    and (-webkit-device-pixel-ratio: 3) { }
+
 /* ----------- iPhone 16 ----------- */
+/* ----------- works OK -------------*/
 
 /* Portrait and Landscape */
 @media only screen 
