--- a/src/App.css
+++ b/src/App.css
@@ -214,7 +214,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid orange;
+  border: 2px solid violet;
 }
 
 .single_image_display {
@@ -658,12 +658,12 @@ li {
     .frame-overlay-light-grey {
       display: none;
     }
-    /* .frame-overlay-dark-grey-buy {
-      border: 3px solid hsl(0, 0%, 20%);
-      width: 530px;
-      height: 580px;
+    .frame-overlay-dark-grey-buy {
+      width: 724px;
+      height: 800px;
+      border: 2px solid hsl(0, 0%, 20%);
     }
-    .single_image_display_container {
+    /* .single_image_display_container {
       width: auto;
       height: 560px;
     } */
