--- a/src/App.css
+++ b/src/App.css
@@ -214,7 +214,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid blue;
+  border: 2px solid purple;
 }
 
 .single_image_display {
@@ -659,14 +659,12 @@ li {
       display: none;
     }
     .frame-overlay-dark-grey-buy {
+      border: 3px solid hsl(0, 0%, 20%);
       width: 724px;
       height: 800px;
-      border: 2px solid hsl(90, 100%, 50%);
     }
     .single_image_display_container {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: contain;
+      transform: scale(0.8);
     }
 }
 
