--- a/src/App.css
+++ b/src/App.css
@@ -191,6 +191,7 @@ nav {
   width: 670px;
   height: 740px;
   border: 3px solid hsl(0, 0%, 20%);
+  z-index: 10;
 }
 
 .frame-overlay-light-grey {
@@ -214,7 +215,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid green;
+  border: 2px solid orange;
 }
 
 .single_image_display {
