iPhone14 blue 440x486 grey frame size

--- a/src/App.css
+++ b/src/App.css
@@ -215,7 +215,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid red;
+  border: 2px solid blue;
   z-index: 0;
 }
 
@@ -636,14 +636,7 @@ li {
     and (width: 390px) 
     and (height: 844px) 
     and (-webkit-device-pixel-ratio: 3) {
-    /* .CarouselSize {
-      height: 166px;
-      width: 386px;
-    }
-    .hue-rotate {
-      height: 166px;
-      width: 386px;
-    } */
+   
     .carousel_white {
       margin-top: 76px;
     }
@@ -661,13 +654,13 @@ li {
       display: none;
     }
     .frame-overlay-dark-grey-buy {
-      width: 724px;
-      height: 800px;
+      width: 440px;
+      height: 486px;
     }
-    .single_image_display_container {
+    /* .single_image_display_container {
       width: 670px;
       height: 740px;
-    }
+    } */
 }
 
 /* -----------  iPhone 14 Pro Max, iPhone 15 Plus and iPhone 15 Pro Max ----------- */
