--- a/src/App.css
+++ b/src/App.css
@@ -215,7 +215,7 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 2px solid red;
+  border: 2px solid blue;
   z-index: 0;
 }
 
